# x402-dev-sandbox

./: .env.example  CLAUDE.md  DEMO.md  DEPLOYMENT.md  LICENSE  QUICKSTART_DEVNET.md  README.md  REQUIREMENTS.md  SOLANA_INTEGRATION.md  TECHNICAL_DEEP_DIVE.md  jest.config.js  package-lock.json  package.json
coverage/: index.html  index.ts.html  lcov.info
coverage/lcov-report/: index.html  index.ts.html
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: README.md  devnet-client.ts  manual-flow.ts  multi-seller-demo.ts  sdk-flow.ts  simple-client.ts
solana-program/: Anchor.toml  README.md
solana-program/programs/x402_escrow/: Cargo.toml
solana-program/programs/x402_escrow/src/: lib.rs
src/launcher/: index.ts
src/mock-facilitator/: index.ts
src/mock-seller/: index.ts
src/sdk/: index.ts  solana-program-client.ts  solana-utils.ts
tests/e2e/: basic-flow.test.ts  error-handling.test.ts  multi-node.test.ts
tests/unit/: sdk.test.ts  verifier.test.ts
