[package]
name = "x402_escrow"
version = "0.1.0"
description = "X402 Payment Escrow Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
